# pykathon

./: ._FOR_JUDGE_ONLY.md  .dockerignore  .gitignore  .pre-commit-config.yaml  FOR_JUDGE_ONLY.md  README.md  fastapi  pyproject.toml  testlog
.github/: pull_request_template.md
.github/workflows/: deploy_dev.yaml  pull_request.yml
docs/: fqa.md  installation.md  local_debugging.md  local_development.md  setting.md  testing.md  tooling.md
src/service_platform/: __main__.py  testlog
src/service_platform/api/: application.py  lifetime.py
src/service_platform/api/exception/: auth_error.py  exception_handler.py  server_error.py  user_error.py
src/service_platform/api/tests/: conftest.py
src/service_platform/client/auth0/: client.py
src/service_platform/client/google/: client.py
src/service_platform/client/linkedin/: client.py
src/service_platform/client/zoom/: client.py
src/service_platform/command/: cli.py
src/service_platform/command/templates/: entity_template.py  manager_template.py
src/service_platform/core/: base_schema.py  class_router.py
src/service_platform/core/middleware/: authentication.py
src/service_platform/core/repository/: _typing.py  repository_base.py
src/service_platform/core/response/: app_response.py
src/service_platform/core/security/: jwt_claim_generator.py  jwt_registered_claim.py  jwt_token.py  jwt_token_generator.py  jwt_token_validator.py
src/service_platform/db/: base_table.py  py.typed
src/service_platform/db/ghe/: repository.py  table.py
src/service_platform/db/refresh_token/: repository.py  table.py
src/service_platform/db/user/: repository.py  table.py
src/service_platform/exception/: base_error.py  exception_handler.py  user_error.py
src/service_platform/runtime/settings/: config.py  (+2 more)
src/service_platform/settings/: config.py  settings.py
src/service_platform/tests/: conftest.py
src/service_platform/utils/: file_utils.py  logger.py
src/tools/: fastapi
src/tools/commands/: cli.py
tests/: conftest.py
tests/api/: test_auth.py  test_user.py
(+26 files in other folders)
