[tool.poetry]
name = "service_platform"
version = "0.1.0"
description = ""
authors = [
    "spartan-khoahuynh <khoa.huynh@c0x12c.com>",
    "spartan-toannhan <toan.nhan@c0x12c.com>",
]
readme = "README.md"
packages = [{ include = "service_platform", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
fastapi = "^0.111.0"
redis = "^5.0.4"
yarl = "^1.9.4"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
typing-inspect = "^0.9.0"
uplink = { extras = ["aiohttp", "pydantic"], version = "^0.9.7" }
boto3 = "^1.34.107"
pydantic-settings-yaml = "^0.2.0"
nest-asyncio = "^1.6.0"
sse-starlette = "^2.1.0"
setuptools = "^70.0.0"
pyjwt = { version = "^2.8.0", extras = ["crypto"] }
pytest-asyncio = "^0.23.7"
ddtrace = "^2.8.5"
flake8-bugbear = "^24.4.26"
taskiq = "^0.11.6"
inflect = "^7.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.4"
pytest = "^8.2.0"
pytest-env = "^1.1.3"
pytest-cov = "^5.0.0"
faker = "*"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "I"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501", "B008"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"**/{tests,docs,tools}/*" = ["E402"]
"src/tools/commands/templates/*" = ["E999"]


[tool.ruff.format]
quote-style = "double"

[tool.mypy]
exclude = [
    "./src/service_platform/service/*",
    "./src/service_platform/client/{zoom,linkedin,google,auth0}/*",
    '_template\.py$' # ignore the template file
]
